--- a/.env.dist
+++ b/.env.dist
@@ -44,3 +44,6 @@ GLIDE_MAX_IMAGE_SIZE = 4000000
 DISCOUNT_6_MONTH = 10
 DISCOUNT_12_MONTH = 20
 
+EXPRESS_PAY_TOKEN = your-token
+EXPRESS_PAY_ACCOUNT_NO = your-account-no
+
