--- a/.env.dist
+++ b/.env.dist
@@ -48,3 +48,9 @@ EXPRESS_PAY_TOKEN = your-token
 EXPRESS_PAY_ACCOUNT_NO = your-account-no
 
 IMAGE_QUALITY = 85
+
+# Данные для метрики:
+# ID: d358e957ab664b91ac24d9e1aa8950f0
+# Пароль: 73a3f943a6b64ca7b2b8d2b2d243e36d
+METRIKA_ID = 34041820
+METRIKA_TOKEN =
