--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
     "gregwar/image-bundle": "dev-master",
     "sjaakp/yii2-taggable": "*",
     "2amigos/yii2-selectize-widget": "~1.0",
-    "paragonie/random_compat": "1.2.2"
+    "paragonie/random_compat": "1.2.2",
+    "kartik-v/yii2-date-range": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.0.0",
