Смена почты робота

--- a/.env.dist
+++ b/.env.dist
@@ -31,6 +31,7 @@ BACKEND_COOKIE_VALIDATION_KEY = jJY1A_9K5jwIqA9Ly2dOwFPJuwBPRouR
 
 ADMIN_EMAIL    = info@justtravel.by
 ROBOT_EMAIL    = info@justtravel.by
+ROBOT_PASSWORD = password
 
 GITHUB_CLIENT_ID = your-client-id
 GITHUB_CLIENT_SECRET = your-client-secret
