--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
     "sjaakp/yii2-taggable": "*",
     "2amigos/yii2-selectize-widget": "~1.0",
     "paragonie/random_compat": "1.2.2",
-    "kartik-v/yii2-date-range": "*"
+    "kartik-v/yii2-date-range": "*",
+    "himiklab/yii2-sitemap-module": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "^2.0.0",
